# MyUGens

./: .gitmodules  CMakeLists.txt  README.md
AdachiAyers/: AdachiAyers.cpp  CMakeLists.txt
AdachiAyers/impulses/trumpet/: Rgd.raw  Rgi.raw  Rrbri.raw
AdachiAyers/sc/HelpSource/Classes/: AdachiAyers.schelp
AdachiAyers/sc/classes/: AdachiAyers.sc
DWGClarinet/: CMakeLists.txt  DWGClarinet.cpp
DWGClarinet/sc/HelpSource/Classes/: DWGClarinet3.schelp
DWGClarinet/sc/classes/: DWGClarinet.sc
DWGFlute/: CMakeLists.txt  DWGFlute.cpp
DWGFlute/lua/: FluteMatrices.lua
DWGFlute/sc/HelpSource/Classes/: DWGFlute.schelp
DWGFlute/sc/classes/: DWGFlute.sc
IIRf/: CMakeLists.txt  IIRf.cpp
KLJunction/: CMakeLists.txt  KLJunction.cpp
Karplus/: CMakeLists.txt  Karplus.cpp
MembraneV/: CMakeLists.txt  MembraneV.cpp  Membrane_shape.c
MembraneV/sc/: CHANGES  MembraneV.html  MembraneV.sc
MembraneV/sc/HelpSource/Classes/: MembraneCircleV.schelp  MembraneHexagonV.schelp
MyPlucked/: CMakeLists.txt  MyPlucked.cpp
MyPlucked/sc/HelpSource/Classes/: MyPlucked.schelp  MyPlucked2.schelp  MyPluckedStiff.schelp
MyPlucked/sc/classes/: MyPlucked.sc
PitchTracker/: CMakeLists.txt  PitchTracker.cpp
PitchTracker/lua/: PitchTracker.lua
PitchTracker/sc/HelpSource/Classes/: PitchTracker.schelp
PitchTracker/sc/classes/: PitchTracker.sc
PluckSynth/: CMakeLists.txt  PluckSynth.cpp
PluckSynth/sc/HelpSource/Classes/: PluckSynth.schelp
PluckSynth/sc/classes/: PluckSynth.sc
SonLPC/: CMakeLists.txt  SonLPC.cpp
SonLPC/sc/HelpSource/Classes/: SonLPC.schelp
SonLPC/sc/classes/: SonLPC.sc
cmake/: functions.cmake
